# py-template

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  README.md  loq.toml  pyproject.toml
.github/workflows/: publish.yml  static-analysis.yml  tests.yml
scripts/: bootstrap_template.py  bootstrap_template_helpers.py
tests/: test_async.py  test_bootstrap_template.py  test_smoke.py
