[build-system]
requires = ["hatchling>=1.28.0", "hatch-vcs>=0.4.0"]
build-backend = "hatchling.build"

[project]
name = "py-template"
dynamic = ["version"]
description = "Personal Python template with uv, ruff, ty, prek, and async pytest."
readme = "README.md"
requires-python = ">=3.10,<3.14"
dependencies = []

[dependency-groups]
dev = [
  "pytest",
  "pytest-asyncio",
  "ruff",
  "ty",
  "prek",
]

[tool.hatch.version]
source = "vcs"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "ASYNC", "RUF"]

[tool.pytest.ini_options]
addopts = ["-ra", "-q"]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ty]
